--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
   <section class="about">
     <h2>About Me</h2>
-    <p>I'm Stephen, a passionate AI innovator and 3rd year Computer Science student. I build cutting-edge projects using Machine Learning, YOLOv8, Python, and more. My goal is to create AI-powered systems that can make a real impact.</p>
+    <p>I'm Stephen, a passionate AI innovator and 3rd year AI and Data  Science student. I build cutting-edge projects using Machine Learning, YOLOv8, Python, and more. My goal is to create AI-powered systems that can make a real impact.</p>
   </section>
 
   <section class="projects">
