--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet" />
   <style>
     :root {
-      --red: #ff0000;
-      --bg-dark: #1a0000;
-      --bg-light: #fff5f5;
+      --primary: #ff4b2b;
+      --secondary: #ff416c;
+      --bg-dark: #1a1a2e;
+      --bg-light: #eaeaea;
       --text-dark: #ffffff;
-      --text-light: #000000;
+      --text-light: #111111;
     }
 
     [data-theme="light"] {
@@ -30,18 +31,20 @@
     body {
       margin: 0;
       font-family: 'Orbitron', sans-serif;
-      background: var(--bg);
+      background: linear-gradient(145deg, #0f0c29, #302b63, #24243e);
       color: var(--text);
       transition: all 0.3s ease;
+      overflow-x: hidden;
     }
 
     header {
-      background: var(--red);
-      padding: 20px;
+      background: linear-gradient(to right, var(--primary), var(--secondary));
+      padding: 30px 20px;
       text-align: center;
       font-size: 2rem;
       color: white;
       position: relative;
+      animation: fadeIn 1s ease;
     }
 
     #themeToggle {
@@ -56,30 +59,31 @@
     }
 
     section {
-      padding: 50px 20px;
+      padding: 60px 20px;
       text-align: center;
+      animation: slideUp 1s ease;
     }
 
     .card, .about, .projects {
-      max-width: 800px;
+      max-width: 900px;
       margin: auto;
-      background: rgba(255, 0, 0, 0.1);
+      background: rgba(255, 255, 255, 0.08);
       border-radius: 15px;
-      padding: 30px;
-      box-shadow: 0 0 15px var(--red);
+      padding: 40px;
+      box-shadow: 0 0 25px rgba(255, 65, 108, 0.4);
     }
 
     input, textarea {
       width: 100%;
-      padding: 10px;
+      padding: 12px;
       margin: 10px 0;
       border-radius: 10px;
-      border: 1px solid var(--red);
+      border: 1px solid var(--primary);
     }
 
     button {
-      padding: 10px 20px;
-      background-color: var(--red);
+      padding: 10px 24px;
+      background-color: var(--primary);
       color: white;
       border: none;
       border-radius: 8px;
@@ -94,16 +98,15 @@
     }
 
     img.logo {
-      height: 60px;
+      height: 70px;
       margin-bottom: 10px;
     }
 
-    /* Chatbot */
     .chat-toggle-btn {
       position: fixed;
       bottom: 20px;
       right: 20px;
-      background: red;
+      background: var(--primary);
       color: white;
       border: none;
       border-radius: 50%;
@@ -119,16 +122,16 @@
       bottom: 80px;
       right: 20px;
       width: 300px;
-      background: #2a0000;
+      background: #222;
       border-radius: 12px;
-      box-shadow: 0 0 10px red;
+      box-shadow: 0 0 10px var(--secondary);
       overflow: hidden;
       display: none;
       z-index: 998;
     }
 
     .chat-header {
-      background: red;
+      background: var(--primary);
       color: white;
       padding: 10px;
       font-weight: bold;
@@ -158,7 +161,7 @@
     .chat-input {
       display: flex;
       padding: 10px;
-      background: #220000;
+      background: #111;
     }
 
     .chat-input input {
@@ -169,7 +172,7 @@
     }
 
     .chat-input button {
-      background: red;
+      background: var(--primary);
       color: white;
       border: none;
       margin-left: 5px;
@@ -178,17 +181,14 @@
       cursor: pointer;
     }
 
-    @media (max-width: 500px) {
-      .chat-container {
-        width: 90%;
-        right: 5%;
-        bottom: 80px;
-      }
-    }
-
     @keyframes fadeIn {
       from { opacity: 0; transform: scale(0.95); }
       to { opacity: 1; transform: scale(1); }
+    }
+
+    @keyframes slideUp {
+      from { transform: translateY(30px); opacity: 0; }
+      to { transform: translateY(0); opacity: 1; }
     }
   </style>
 </head>
@@ -202,7 +202,7 @@
 
   <section class="about">
     <h2>About Me</h2>
-    <p>I'm Stephen, a passionate AI innovator and 3rd year Computer Science student. I build cutting-edge projects using Machine Learning, YOLOv8, Python, and more.</p>
+    <p>I'm Stephen, a passionate AI innovator and 3rd year Computer Science student. I build intelligent systems using Python, YOLOv8, OpenCV, Firebase, and modern web tech. My mission: make the future smarter, safer, and more connected.</p>
   </section>
 
   <section class="projects">
@@ -210,8 +210,8 @@
     <ul>
       <li>🚑 Ambulance Detection Traffic Signal using YOLOv8</li>
       <li>📊 Real-Time Vehicle Counting and Signal Automation</li>
-      <li>🧠 AI Chatbot with OpenAI</li>
-      <li>📸 Image Classification & Object Detection</li>
+      <li>🧠 AI Chatbot for Portfolio Sites</li>
+      <li>📸 Image Classification & Object Detection Tools</li>
     </ul>
   </section>
 
@@ -229,7 +229,7 @@
 
   <button class="chat-toggle-btn" onclick="toggleChat()">💬</button>
   <div class="chat-container" id="chatContainer">
-    <div class="chat-header">💬 Ask StephenBot</div>
+    <div class="chat-header">🤖 Ask StephenBot</div>
     <div class="chat-box" id="chatBox"></div>
     <div class="chat-input">
       <input type="text" id="chatInput" placeholder="Ask me anything...">
@@ -239,8 +239,8 @@
 
   <footer>
     Connect with me:
-    <a href="https://github.com/T-Stephen" style="color:red;">GitHub</a> |
-    <a href="mailto:stephenbugi@gmail.com" style="color:red;">Email</a>
+    <a href="https://github.com/T-Stephen" style="color:#ff4b2b;">GitHub</a> |
+    <a href="mailto:stephenbugi@gmail.com" style="color:#ff4b2b;">Email</a>
   </footer>
 
   <script>
@@ -267,7 +267,7 @@
       if (!msg) return;
       appendMessage("user", msg);
       const reply = getBotReply(msg);
-      setTimeout(() => appendMessage("bot", reply), 700);
+      setTimeout(() => appendMessage("bot", reply), 600);
       chatInput.value = "";
     }
 
@@ -281,11 +281,14 @@
 
     function getBotReply(msg) {
       msg = msg.toLowerCase();
-      if (msg.includes("name")) return "I'm T-Stephen, an AI innovator and student.";
-      if (msg.includes("project")) return "I work on AI traffic control, YOLOv8 models, and chatbot integration.";
-      if (msg.includes("skills")) return "My skills include Python, Firebase, OpenCV, and AI development.";
-      if (msg.includes("contact")) return "Reach me at stephenbugi@gmail.com or GitHub: T-Stephen.";
-      return "I'm here to guide you about Stephen and his projects. Try asking about his skills or work!";
+      if (msg.includes("name")) return "I'm T-Stephen, an AI enthusiast building the future.";
+      if (msg.includes("skills")) return "Python, YOLOv8, Firebase, OpenCV, HTML/CSS, AI/ML.";
+      if (msg.includes("projects")) return "I built a YOLOv8-based ambulance detection system, chatbots, and traffic automation tools.";
+      if (msg.includes("github")) return "Check my GitHub: https://github.com/T-Stephen";
+      if (msg.includes("goals")) return "To create intelligent, life-improving AI solutions.";
+      if (msg.includes("contact")) return "Email: stephenbugi@gmail.com or GitHub: T-Stephen.";
+      if (msg.includes("college")) return "I'm currently in my 3rd year of Computer Science.";
+      return "I'm your smart portfolio assistant! Ask me about Stephen, his work, or contact details.";
     }
   </script>
 
@@ -322,5 +325,4 @@
     }
   </script>
 </body>
-
 </html>
