--- a/index.html
+++ b/index.html
@@ -1,327 +1,110 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="dark">
-
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="T-Stephen | AI Innovator Portfolio Website" />
   <title>T-Stephen | AI Innovator</title>
-  <link rel="icon" type="image/png" href="STEVE_GitHub_Logo.png" />
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet" />
   <style>
-    :root {
-      --primary: #ff4b2b;
-      --secondary: #ff416c;
-      --bg-dark: #1a1a2e;
-      --bg-light: #eaeaea;
-      --text-dark: #ffffff;
-      --text-light: #111111;
-    }
-
-    [data-theme="light"] {
-      --bg: var(--bg-light);
-      --text: var(--text-light);
-    }
-
-    [data-theme="dark"] {
-      --bg: var(--bg-dark);
-      --text: var(--text-dark);
-    }
-
     body {
       margin: 0;
-      font-family: 'Orbitron', sans-serif;
-      background: linear-gradient(145deg, #0f0c29, #302b63, #24243e);
-      color: var(--text);
-      transition: all 0.3s ease;
-      overflow-x: hidden;
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(135deg, #7f1d1d, #ff4b2b);
+      color: white;
+      scroll-behavior: smooth;
     }
-
-    header {
-      background: linear-gradient(to right, var(--primary), var(--secondary));
-      padding: 30px 20px;
+    header, section {
+      padding: 50px;
       text-align: center;
-      font-size: 2rem;
+    }
+    nav a {
+      margin: 0 15px;
       color: white;
-      position: relative;
-      animation: fadeIn 1s ease;
-    }
-
-    #themeToggle {
-      position: absolute;
-      top: 20px;
-      right: 20px;
-      padding: 6px 12px;
-      background: white;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-
-    section {
-      padding: 60px 20px;
-      text-align: center;
-      animation: slideUp 1s ease;
-    }
-
-    .card, .about, .projects {
-      max-width: 900px;
-      margin: auto;
-      background: rgba(255, 255, 255, 0.08);
-      border-radius: 15px;
-      padding: 40px;
-      box-shadow: 0 0 25px rgba(255, 65, 108, 0.4);
-    }
-
-    input, textarea {
-      width: 100%;
-      padding: 12px;
-      margin: 10px 0;
-      border-radius: 10px;
-      border: 1px solid var(--primary);
-    }
-
-    button {
-      padding: 10px 24px;
-      background-color: var(--primary);
-      color: white;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-
-    footer {
-      text-align: center;
-      padding: 20px;
-      background: #100000;
-      color: #aaa;
-    }
-
-    img.logo {
-      height: 70px;
-      margin-bottom: 10px;
-    }
-
-    .chat-toggle-btn {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      background: var(--primary);
-      color: white;
-      border: none;
-      border-radius: 50%;
-      width: 50px;
-      height: 50px;
-      font-size: 24px;
-      cursor: pointer;
-      z-index: 999;
-    }
-
-    .chat-container {
-      position: fixed;
-      bottom: 80px;
-      right: 20px;
-      width: 300px;
-      background: #222;
-      border-radius: 12px;
-      box-shadow: 0 0 10px var(--secondary);
-      overflow: hidden;
-      display: none;
-      z-index: 998;
-    }
-
-    .chat-header {
-      background: var(--primary);
-      color: white;
-      padding: 10px;
+      text-decoration: none;
       font-weight: bold;
     }
-
-    .chat-box {
-      height: 200px;
-      overflow-y: auto;
-      padding: 10px;
-      font-size: 14px;
+    .projects, .about {
+      min-height: 300px;
     }
-
-    .chat-bubble {
-      background: white;
-      color: black;
-      padding: 8px;
-      margin: 5px;
-      border-radius: 10px;
-      display: inline-block;
-      max-width: 85%;
-      animation: fadeIn 0.5s;
-    }
-
-    .chat-bubble.user { background: #ffcccc; }
-    .chat-bubble.bot { background: #ffe6e6; text-align: left; }
-
-    .chat-input {
-      display: flex;
-      padding: 10px;
-      background: #111;
-    }
-
-    .chat-input input {
-      flex: 1;
-      padding: 8px;
-      border-radius: 6px;
-      border: none;
-    }
-
-    .chat-input button {
-      background: var(--primary);
-      color: white;
-      border: none;
-      margin-left: 5px;
-      padding: 8px;
-      border-radius: 6px;
-      cursor: pointer;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: scale(0.95); }
-      to { opacity: 1; transform: scale(1); }
-    }
-
-    @keyframes slideUp {
-      from { transform: translateY(30px); opacity: 0; }
-      to { transform: translateY(0); opacity: 1; }
+    #feedbackForm {
+      background-color: rgba(255,255,255,0.1);
+      padding: 30px;
+      border-radius: 12px;
+      max-width: 500px;
+      margin: auto;
     }
   </style>
 </head>
-
 <body>
   <header>
-    <img src="STEVE_GitHub_Logo.png" class="logo" alt="Steve Logo" />
-    Welcome to T-Stephen's AI World
-    <button id="themeToggle">Light Mode</button>
+    <h1>Welcome to T-Stephen's AI Portfolio</h1>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#projects">Projects</a>
+      <a href="#feedbackForm">Feedback</a>
+    </nav>
   </header>
 
-  <section class="about">
+  <section id="about" class="about">
     <h2>About Me</h2>
-    <p>I'm Stephen, a passionate AI innovator and 3rd year Computer Science student. I build intelligent systems using Python, YOLOv8, OpenCV, Firebase, and modern web tech. My mission: make the future smarter, safer, and more connected.</p>
+    <p>I'm T-Stephen, a 3rd year student passionate about AI, innovation, and solving real-world problems.</p>
   </section>
 
-  <section class="projects">
-    <h2>AI Projects</h2>
-    <ul>
-      <li>🚑 Ambulance Detection Traffic Signal using YOLOv8</li>
-      <li>📊 Real-Time Vehicle Counting and Signal Automation</li>
-      <li>🧠 AI Chatbot for Portfolio Sites</li>
-      <li>📸 Image Classification & Object Detection Tools</li>
-    </ul>
+  <section id="projects" class="projects">
+    <h2>🚀 Live AI Demo</h2>
+    <p>Upload a video named <code>demo.mp4</code> to show your project here.</p>
+    <video width="100%" controls autoplay loop muted>
+      <source src="demo.mp4" type="video/mp4" />
+      Your browser does not support the video tag.
+    </video>
   </section>
 
   <section>
-    <div class="card">
-      <h2>🌟 Rate My Website</h2>
-      <form id="feedbackForm">
-        <input type="text" id="name" placeholder="Your name" />
-        <input type="number" id="rating" min="1" max="5" placeholder="Rating (1-5)" />
-        <textarea id="message" placeholder="Your feedback"></textarea>
-        <button type="button" onclick="submitFeedback()">Submit Feedback</button>
-      </form>
-    </div>
+    <h2>⭐ Rate This Portfolio</h2>
+    <form id="feedbackForm">
+      <input type="text" placeholder="Your Name" required><br><br>
+      <textarea placeholder="Your Feedback" required></textarea><br><br>
+      <input type="number" min="1" max="5" placeholder="Rating (1-5)" required><br><br>
+      <button type="submit">Submit</button>
+    </form>
   </section>
 
-  <button class="chat-toggle-btn" onclick="toggleChat()">💬</button>
-  <div class="chat-container" id="chatContainer">
-    <div class="chat-header">🤖 Ask StephenBot</div>
-    <div class="chat-box" id="chatBox"></div>
-    <div class="chat-input">
-      <input type="text" id="chatInput" placeholder="Ask me anything...">
-      <button onclick="sendChat()">Send</button>
-    </div>
-  </div>
-
-  <footer>
-    Connect with me:
-    <a href="https://github.com/T-Stephen" style="color:#ff4b2b;">GitHub</a> |
-    <a href="mailto:stephenbugi@gmail.com" style="color:#ff4b2b;">Email</a>
-  </footer>
+  <!-- 🎙️ Voice Control Button -->
+  <button onclick="startVoiceCommand()" style="
+    position: fixed;
+    bottom: 90px;
+    left: 20px;
+    background: #ff4b2b;
+    color: white;
+    border: none;
+    padding: 12px 20px;
+    border-radius: 12px;
+    z-index: 999;
+    cursor: pointer;">
+    🎙️ Speak
+  </button>
 
   <script>
-    const htmlTag = document.documentElement;
-    const toggleBtn = document.getElementById('themeToggle');
+    function startVoiceCommand() {
+      const recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
+      recognition.lang = 'en-US';
+      recognition.interimResults = false;
+      recognition.maxAlternatives = 1;
+      recognition.start();
 
-    toggleBtn.addEventListener('click', () => {
-      const current = htmlTag.getAttribute("data-theme");
-      const next = current === "light" ? "dark" : "light";
-      htmlTag.setAttribute("data-theme", next);
-      toggleBtn.textContent = next === "light" ? "Dark Mode" : "Light Mode";
-    });
+      recognition.onresult = function(event) {
+        const command = event.results[0][0].transcript.toLowerCase();
+        console.log("You said:", command);
+        if (command.includes("project")) document.querySelector(".projects").scrollIntoView({behavior: 'smooth'});
+        else if (command.includes("feedback") || command.includes("rate")) document.getElementById("feedbackForm").scrollIntoView({behavior: 'smooth'});
+        else if (command.includes("about")) document.querySelector(".about").scrollIntoView({behavior: 'smooth'});
+        else if (command.includes("dark")) document.documentElement.setAttribute("data-theme", "dark");
+        else if (command.includes("light")) document.documentElement.setAttribute("data-theme", "light");
+        else alert("Command not recognized.");
+      };
 
-    const chatBox = document.getElementById("chatBox");
-    const chatInput = document.getElementById("chatInput");
-    const chatContainer = document.getElementById("chatContainer");
-
-    function toggleChat() {
-      chatContainer.style.display = chatContainer.style.display === "block" ? "none" : "block";
-    }
-
-    function sendChat() {
-      const msg = chatInput.value.trim();
-      if (!msg) return;
-      appendMessage("user", msg);
-      const reply = getBotReply(msg);
-      setTimeout(() => appendMessage("bot", reply), 600);
-      chatInput.value = "";
-    }
-
-    function appendMessage(sender, text) {
-      const bubble = document.createElement("div");
-      bubble.className = `chat-bubble ${sender}`;
-      bubble.textContent = text;
-      chatBox.appendChild(bubble);
-      chatBox.scrollTop = chatBox.scrollHeight;
-    }
-
-    function getBotReply(msg) {
-      msg = msg.toLowerCase();
-      if (msg.includes("name")) return "I'm T-Stephen, an AI enthusiast building the future.";
-      if (msg.includes("skills")) return "Python, YOLOv8, Firebase, OpenCV, HTML/CSS, AI/ML.";
-      if (msg.includes("projects")) return "I built a YOLOv8-based ambulance detection system, chatbots, and traffic automation tools.";
-      if (msg.includes("github")) return "Check my GitHub: https://github.com/T-Stephen";
-      if (msg.includes("goals")) return "To create intelligent, life-improving AI solutions.";
-      if (msg.includes("contact")) return "Email: stephenbugi@gmail.com or GitHub: T-Stephen.";
-      if (msg.includes("college")) return "I'm currently in my 3rd year of Computer Science.";
-      return "I'm your smart portfolio assistant! Ask me about Stephen, his work, or contact details.";
-    }
-  </script>
-
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-app.js";
-    import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-firestore.js";
-
-    const firebaseConfig = {
-      apiKey: "AIzaSyDv2IZjs4dyC4w2Tne4jqFVCyHN-J6oFF0",
-      authDomain: "t-stephen-ai-portfolio.firebaseapp.com",
-      projectId: "t-stephen-ai-portfolio",
-      storageBucket: "t-stephen-ai-portfolio.appspot.com",
-      messagingSenderId: "493827826934",
-      appId: "1:493827826934:web:0f0e3a03fe56c25c5338d7",
-      measurementId: "G-X097JGBRF4"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
-
-    window.submitFeedback = async () => {
-      const name = document.getElementById("name").value;
-      const rating = document.getElementById("rating").value;
-      const message = document.getElementById("message").value;
-      if (!name || !rating || !message) return alert("Please fill all fields");
-      try {
-        await addDoc(collection(db, "ratings"), { name, rating, message });
-        alert("✅ Thanks for your feedback!");
-        document.getElementById("feedbackForm").reset();
-      } catch (e) {
-        console.error("Error adding document: ", e);
-        alert("Something went wrong. Try again later.");
-      }
+      recognition.onerror = function(event) {
+        alert("Voice input failed: " + event.error);
+      };
     }
   </script>
 </body>
